--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<img src = "https://picsum.photos/id/123/200/300" alt = "logo">
 </body>
 
 </html>
